# AdventofCode

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  vcpkg.json
2015/: CMakeLists.txt
2015-zig/: build.zig
2015-zig/src/6/: build.zig.zon  main.zig  out.txt
2015-zig/src/7/: main.zig
2015-zig/src/8/: main.zig
2015-zig/src/9/: main.zig
2015-zig/src/blank/: main.zig
2015-zig/zig-out/lib/: _2015_zig.lib
2015/1/: CMakeLists.txt  main.cpp
2015/2/: CMakeLists.txt  main.cpp
2015/3/: CMakeLists.txt  main.cpp
2015/4/: CMakeLists.txt  main.cpp
2015/5/: CMakeLists.txt
2015/6/: CMakeLists.txt  main.cpp
2023/: CMakeLists.txt
2023/1/: CMakeLists.txt  main.cpp
2023/10/: CMakeLists.txt  main.cpp
2023/11/: CMakeLists.txt  main.cpp
2023/12/: CMakeLists.txt  main.cpp
2023/13/: CMakeLists.txt  main.cpp
2023/14/: CMakeLists.txt  main.cpp
2023/15/: CMakeLists.txt  main.cpp
2023/16/: CMakeLists.txt  main.cpp
2023/17/: CMakeLists.txt  main.cpp
2023/18/: CMakeLists.txt  main.cpp
2023/19/: CMakeLists.txt  main.cpp
2023/2/: CMakeLists.txt  main.cpp
2023/20/: CMakeLists.txt  main.cpp
2023/21/: CMakeLists.txt  main.cpp
2023/22/: CMakeLists.txt  main.cpp
2023/23/: CMakeLists.txt  main.cpp
2023/24/: CMakeLists.txt  main.cpp
2023/3/: CMakeLists.txt  main.cpp
2023/4/: CMakeLists.txt  main.cpp
2023/5/: CMakeLists.txt  main.cpp
2023/7/: CMakeLists.txt  main.cpp
2023/8/: CMakeLists.txt  main.cpp
2023/9/: CMakeLists.txt  main.cpp
2024/: CMakeLists.txt  build.zig  compile_commands.json
2024/.zig-cache/o/0e1aedb922b30547759b050f43fae5cd/: 2024
2024/.zig-cache/o/1260255e46c6e1f8fea9d00264cfabed/: 2024
2024/.zig-cache/o/12ec4b13f6307db47b693b1358605996/: 2024
2024/.zig-cache/o/14a5b81766dbdf9e00b2e3b0790f0663/: 2024
2024/.zig-cache/o/2bd3dbadeb0f78d750567fe19709cc39/: test
2024/.zig-cache/o/2c3d3a48c7fa83258f02b4c0e5ec94a2/: test
2024/.zig-cache/o/34fcf515c6d17f3a70c712e2d358a22c/: 2024
2024/.zig-cache/o/35f69acf5ec854f93e727188bbb0439b/: test
2024/.zig-cache/o/38cf1e5c6dd678047226bf57a43205d8/: 2024
2024/.zig-cache/o/4246fb2419bb2117a220de27c8cdd731/: 2024
2024/.zig-cache/o/44dcfa09699d6892a765832db3635da5/: test
2024/.zig-cache/o/493fa90d427ce8a1813003ccc6c0ec70/: 2024
2024/.zig-cache/o/4a2d61fd897c7822156265f4c8ec431e/: test
2024/.zig-cache/o/531330dfaae65691eef68a84b9e2e9e2/: test
2024/.zig-cache/o/546e2203f2caa14db44e2abd25f816f4/: 2024
2024/.zig-cache/o/55f023a28eae86c5bb78f6c3c88d0b6c/: test
2024/.zig-cache/o/55f83720e9c670f21b8d2850ce1befeb/: test
2024/.zig-cache/o/5b50438da2a006112836b94d3b2eec74/: 2024
2024/.zig-cache/o/5c486b1fdd4dcfa28ccc0a0fe3de8d1e/: 2024
2024/.zig-cache/o/5eb10dc1f14f74402bd53a23afe3c235/: 2024
2024/.zig-cache/o/630c14e10953b74e2c9e0aa6f77b7240/: 2024
2024/.zig-cache/o/66de09977e9c734890797f50be883432/: test
2024/.zig-cache/o/6c31046d32d56945121f6980bb793b7e/: cimport.zig
2024/.zig-cache/o/6d0a07bdf4478419f01fc01280572b6c/: 2024
2024/.zig-cache/o/7c035792ace572a5d598543555321069/: 2024
2024/.zig-cache/v/: 70e10e5e4186fad4
2024/src/: aoc.zig  main.zig
2024/src/day/: main.zig
2024/src/day_1/: main.zig
2024/src/day_10/: main.zig
2024/src/day_11/: main.zig
2024/src/day_12/: main.zig
2024/src/day_13/: main.zig
2024/src/day_14/: main.zig
2024/src/day_15/: main.zig
2024/src/day_16/: main.zig
2024/src/day_17/: main.zig
2024/src/day_18/: main.zig
2024/src/day_2/: main.zig
2024/src/day_22/: main.zig
2024/src/day_23/: main.zig
2024/src/day_24/: main.zig
2024/src/day_25/: main.zig
2024/src/day_4/: main.zig
2024/src/day_5/: main.zig
2024/src/day_6/: main.zig
2024/src/day_7/: main.zig
2024/src/day_8/: main.zig
2024/src/day_9/: main.zig
2024/src/test/: main.zig
enc_temp_folder/e679b352f54c4fe6392eb9ef634974a9/: main.cpp
utils/: FileParser.h  string_stuff.h
(+32 files in other folders)
