# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.16)

project ("1")
project ("2")
project ("3")
project ("4")
project ("5")
project ("6")
project ("7")
project ("8")
project ("9")
project ("10")
project ("11")
project ("12")
project ("12")
project ("13")
# Include sub-projects.
add_subdirectory ("1")
add_subdirectory ("2")
add_subdirectory ("3")
add_subdirectory ("4")
add_subdirectory ("5")
add_subdirectory ("6")
add_subdirectory ("7")
add_subdirectory ("8")
add_subdirectory ("9")
add_subdirectory ("10")
add_subdirectory ("11")
add_subdirectory ("12")
add_subdirectory ("13")
